--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </label>
     <nav class="nav">
         <div class="menu">
-            <a href="../index.html">
+            <a href="./index.html">
                 <logo>
                     <img src="./img/logo.png" alt="" class="logo-menu">
                 </logo>
