--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>VDMI Games</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
     <div class="loading">
+        <logo>
+            <img src="../img/logo.png" alt="" class="logo-loading">
+        </logo>
         <h1 class="title__loading-developers">Developed by: Vlad, Danylo, <br> Mykhailo, Ilya</h1>
         <h1 class="title__loading-copyright">Copyright © 2024 VDMI Games. <br> All rights reserved</h1>
         <div class="loader">
@@ -34,11 +38,11 @@
             </logo>
         </a>
         <a href="./index.html" class="Home">Home</a>
-        <a href="" class="About Us">About Us</a>
+        <a href="./HTML/About-Us.html" class="About Us">About Us</a>
         <a href="./HTML/Danylo.html" class="Page Danylo">Danylo's Game</a>
-        <a href="" class="Page Ilya">Ilya's Game</a>
-        <a href="" class="Page Misha">Misha's Game</a>
-        <a href="" class="Page Vlad">Vlad's Game</a>
+        <a href="./imdex.html" class="Page Ilya">Ilya's Game</a>
+        <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
+        <a href="./HTML/Vladyslav.html" class="Page Vlad">Vlad's Game</a>
     </header>
 
     
@@ -55,11 +59,11 @@
                 </logo>
             </a>
             <a href="../index.html" class="Home">Home</a>
-            <a href="" class="About Us">About Us</a>
+            <a href="./HTML/About-Us.html" class="About Us">About Us</a>
             <a href="./HTML/Danylo.html" class="Page Danylo">Danylo's Game</a>
-            <a href="" class="Page Ilya">Ilya's Game</a>
-            <a href="" class="Page Misha">Misha's Game</a>
-            <a href="" class="Page Vlad">Vlad's Game</a>
+            <a href="./imdex.html" class="Page Ilya">Ilya's Game</a>
+            <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
+            <a href="./HTML/Vladyslav.html" class="Page Vlad">Vlad's Game</a>
         </div>
     </nav>
 
@@ -68,11 +72,15 @@
     data-aos-offset="300"
     data-aos-delay="800"
     data-aos-easing="ease-in-sine" data-aos-duration="1350" -->
+    <div class="i__title__home-box">
+    <h1 class="i__title-home" id="animated__title-home"></h1>
+        <div class="i__line-home"></div>
+    </div>
     <main class="main">
         <a href="./HTML/Danylo.html">
             <div class="box-main-1">
-                <img src="./img/Nature-1.jpg" alt="" class="img-main-1">
-                <h2 class="title-main-1">Danylo's Game</h2>
+                <img src="./img/2048-photo.png" alt="" class="img-main-1">
+                <h2 class="title-main-1">2048</h2>
             </div>
         </a>
         <a href="./HTML/DanyloSecondGame.html">
@@ -81,14 +89,18 @@
                 <h2 class="title-main-2">Ilya's Game</h2>
             </div>
         </a>
-        <div class="box-main-3">
-            <img src="./img/Nature-3.jpg" alt="" class="img-main-3">
-            <h2 class="title-main-3">Misha's Game</h2>
-        </div>
-        <div class="box-main-4">
-            <img src="./img/Nature-4.jpg" alt="" class="img-main-4">
-            <h2 class="title-main-4">Vlad's Game</h2>
-        </div>
+        <a href="" class="box-main-3">
+            <div class="box-main-3">
+                <img src="./img/Nature-3.jpg" alt="" class="img-main-3">
+                <h2 class="title-main-3">Misha's Game</h2>
+            </div>
+        </a>
+        <a href="./HTML/Vladyslav.html" class="box-main-4">
+            <div>
+                <img src="./img/Nature-4.jpg" alt="" class="img-main-4">
+                <h2 class="title-main-4">Vlad's Game</h2>
+            </div>
+        </a>
     </main>
 
     <footer class="footer">
