--- a/HTML/Danylo.html
+++ b/HTML/Danylo.html
@@ -6,12 +6,16 @@
     <title>2048</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/Danylo.css">
 </head>
 <body>
     
 
     <div class="loading">
+        <logo>
+            <img src="../img/logo.png" alt="" class="logo-loading">
+        </logo>
         <h1 class="title__loading-developers">Developed by: Vlad, Danylo, <br> Mykhailo, Ilya</h1>
         <h1 class="title__loading-copyright">Copyright © 2024 VDMI Games. <br> All rights reserved</h1>
         <div class="loader">
@@ -36,11 +40,11 @@
         </logo>
     </a>
         <a href="../index.html" class="Home">Home</a>
-        <a href="" class="About Us">About Us</a>
+        <a href="./About-Us.html" class="About Us">About Us</a>
         <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
         <a href="" class="Page Ilya">Ilya's Game</a>
         <a href="" class="Page Misha">Misha's Game</a>
-        <a href="" class="Page Vlad">Vlad's Game</a>
+        <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
     </header>
 
     <p class="text__header-mobile">Menu</p>
@@ -56,11 +60,11 @@
                 </logo>
             </a>
             <a href="../index.html" class="Home">Home</a>
-            <a href="" class="About Us">About Us</a>
+            <a href="./About-Us.html" class="About Us">About Us</a>
             <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
             <a href="" class="Page Ilya">Ilya's Game</a>
             <a href="" class="Page Misha">Misha's Game</a>
-            <a href="" class="Page Vlad">Vlad's Game</a>
+            <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
         </div>
     </nav>
 
@@ -94,11 +98,11 @@
     </main>
 
 <div class="Container__second-game">    
-    <h1 class="title__about__second-game">The next game is <br> "Memory". <br> Test yourself <br> in a new game.</h1>
+    <h1 class="title__about__second-game">The next game is <br> "Writer". <br> Test yourself <br> in a new game.</h1>
     <a class="link__Second__game-block" href="../HTML/DanyloSecondGame.html">
         <div class="Second__game-block">
-            <img src="../img/Nature-4.jpg" alt="" class="Second__game-img">
-            <h2 class="Second__game-title">Memory</h2>
+            <img src="../img/Writer-photo.png" alt="" class="Second__game-img">
+            <h2 class="Second__game-title">Writer</h2>
         </div>
     </a>
 </div>
