--- a/HTML/Vladyslav.html
+++ b/HTML/Vladyslav.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Writer</title>
+    <title>MainPage</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Pixelify+Sans&family=Playfair+Display:wght@700&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/DanyloSecondGame.css">
+    <link rel="stylesheet" href="../CSS/Vladyslav.css">
 </head>
 <body>
     
-
     <div class="loading">
         <logo>
             <img src="../img/logo.png" alt="" class="logo-loading">
@@ -33,18 +33,17 @@
         </div>
     </div>
 
-
     <header class="header">
-    <a href="../index.html">
-        <logo>
-            <img src="../img/logo.png" alt="" class="logo">
-        </logo>
-    </a>
+        <a href="../index.html">
+            <logo>
+                <img src="../img/logo.png" alt="" class="logo">
+            </logo>
+        </a>
         <a href="../index.html" class="Home">Home</a>
         <a href="./About-Us.html" class="About Us">About Us</a>
         <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
         <a href="" class="Page Ilya">Ilya's Game</a>
-        <a href="" class="Page Misha">Misha's Game</a>
+        <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
         <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
     </header>
 
@@ -64,50 +63,49 @@
             <a href="./About-Us.html" class="About Us">About Us</a>
             <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
             <a href="" class="Page Ilya">Ilya's Game</a>
-            <a href="" class="Page Misha">Misha's Game</a>
+            <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
             <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
         </div>
     </nav>
 
-<div class="full-page">
-        <p class="rules-text">Rules of the game:</p>
-    <div class="rules-box">
-        <button type="button" class="circle"></button>
-        <i class="fa fa-question rules-icon"></i>
-    </div>
-    <aside class="reference-block">
-        <h2 class="text-reference">Rules of the game: You must complete it in <br> 35 seconds. There will be only 3 levels. <br> You have to rewrite the sentences that are <br> highlighted in bright blue. <br> Once you've written one level, press Enter or the "Finished" button and <br> you'll move on. For each incorrect character <br> or mistake in a sentence, you will receive +1 to the mistake count. <br> If the counter is more than 5, you lose. <br> If you have completed all 3 levels, you have won.</з>
-        <button class="button-reference"><span class="button-span">OK</span></button>
-    </aside>
-
-    <div class="time-block">
-        Time: <p class="time">35</p>
-    </div>
-
-    <aside class="modal__game-over">
-        <p class="text__modal__game-over">Game over! That's not correct text and too many mistakes! Page reloads!</p>
-    </aside>
-    <main class="main">
-        <p class="ready-text">Are you ready to play? <br> Click "Start"</p>
-        <h1 class="level-text"></h1>
-        <article class="game-text"></article>
-        <div class="input-box">
-            <input type="text" class="game-input" placeholder=" " />
+    <div class="loading">
+        <h1 class="title__loading-developers">Developed by: Vlad, Danylo, <br> Mykhailo, Ilya</h1>
+        <h1 class="title__loading-copyright">Copyright © 2024 VDMI Games. <br> All rights reserved</h1>
+        <div class="loader">
+            <div class="loader-inner">
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+                <div class="loader-block"></div>
+            </div>
         </div>
-        <button type="button" class="finished-button">Finished</button>
-        <button type="button" class="start-button">Start</button>
-
-        <div class="container">
-            <div class="errors">Mistakes: 0</div>
-        </div>
-    </main>
-</div>
-    
+    </div>
+    <div class="info">
+        <h2 class="info__title">Welcome to ColorLogic</h2>
+        <p class="info__txt">The game is developed by Vladyslav Kolochavyn</p>
+        <p class="info__txt">It can change during the time whereas the game is being improved</p>
+        <p class="info__txt">Share your personal experience with your friends!</p>
+        <p class="info__txt">Have fun!</p>
+    </div>
+    <h1 class="bottom__txt">For better experience play on screen 800px and more</h1>
+    <div class="txt__background">
+        <p class="txt">Press Enter to start!</p>
+    </div>
+    <div class="loading">
+        <p class="load__text">Loading...</p>
+    </div>
+    <img src="./images/pngwing.com-2.png" class="main__image1" alt="">
+    <img src="./images/pngwing.com-3.png" class="main__image2" alt="">
+    <img src="./images/pngwing.com-4.png" class="main__image3" alt="">
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-    <script src="../JavaScript/DanyloSecondGame.js"></script>
+    <script src="../JavaScript/Vladyslav.js"></script>
 </body>
 </html>
