--- a/HTML/About-Us.html
+++ b/HTML/About-Us.html
@@ -42,8 +42,8 @@
             <a href="../index.html" class="Home">Home</a>
             <a href="../HTML/About-Us.html" class="About Us">About Us</a>
             <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
-            <a href="" class="Page Ilya">Ilya's Game</a>
-            <a href="" class="Page Misha">Misha's Game</a>
+            <a href="../imdex.html" class="Page Ilya">Ilya's Game</a>
+            <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
             <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
     </header>
 
@@ -62,8 +62,8 @@
             <a href="../index.html" class="Home">Home</a>
             <a href="./About-Us.html" class="About Us">About Us</a>
             <a href="./Danylo.html" class="Page Danylo">Danylo's Game</a>
-            <a href="" class="Page Ilya">Ilya's Game</a>
-            <a href="" class="Page Misha">Misha's Game</a>
+            <a href="../imdex.html" class="Page Ilya">Ilya's Game</a>
+            <a href="https://misha1290.github.io/kingdom/" class="Page Misha">Misha's Game</a>
             <a href="./Vladyslav.html" class="Page Vlad">Vlad's Game</a>
         </div>
     </nav>
