--- a/index.html
+++ b/index.html
@@ -72,24 +72,20 @@
     data-aos-offset="300"
     data-aos-delay="800"
     data-aos-easing="ease-in-sine" data-aos-duration="1350" -->
-    <div class="i__title__home-box">
-    <h1 class="i__title-home" id="animated__title-home"></h1>
-        <div class="i__line-home"></div>
-    </div>
     <main class="main">
         <a href="./HTML/Danylo.html">
             <div class="box-main-1">
                 <img src="./img/2048-photo.png" alt="" class="img-main-1">
-                <h2 class="title-main-1">2048</h2>
+                <h2 class="title-main-1">Danylo's Game</h2>
             </div>
         </a>
-        <a href="./HTML/DanyloSecondGame.html">
+        <a href="./imdex.html">
             <div class="box-main-2">
                 <img src="./img/Nature-2.jpg" alt="" class="img-main-2">
                 <h2 class="title-main-2">Ilya's Game</h2>
             </div>
         </a>
-        <a href="" class="box-main-3">
+        <a href="https://misha1290.github.io/kingdom/" class="box-main-3">
             <div class="box-main-3">
                 <img src="./img/Nature-3.jpg" alt="" class="img-main-3">
                 <h2 class="title-main-3">Misha's Game</h2>
