--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div class="loading">
         <logo>
-            <img src="../img/logo.png" alt="" class="logo-loading">
+            <img src="./img/logo.png" alt="" class="logo-loading">
         </logo>
         <h1 class="title__loading-developers">Developed by: Vlad, Danylo, <br> Mykhailo, Ilya</h1>
         <h1 class="title__loading-copyright">Copyright © 2024 VDMI Games. <br> All rights reserved</h1>
